# selenium_webscraping

./: README.md  pyproject.toml
.github/workflows/: github-actions-basic.yml
configs/: .env  configs.py
selenium_scraping_poetry/: pyproject.toml
selenium_scraping_poetry/.github/workflows/: github-actions-basic.yml
selenium_scraping_poetry/notebooks/: helium_scrape.ipynb
selenium_scraping_poetry/selenium_scraping_poetry/: first_scrape.py  scrape_for_test.py  scrape_with_helium.py
selenium_scraping_poetry/tests/: test_selenium_scrape.py
